<resources>
    <string name="app_name">Gradify</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="message">WELCOME!</string>
    <string name="splash">Hi,there.</string>
    <string name="activity_login">Login</string>
    <string name="Roll">Roll number</string>
    <string name="Name">Name</string>
    <string name="login">LOGIN</string>
    <string name="Get_started">Get started with</string>
    <string name="Gradify">GRADIFY</string>
    <string name="help">Help?</string>
    <string name="aboutus">About us</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_closed">Closed</string>

    <string name="title_section1">1st year</string>
    <string name="title_section2">2nd year</string>
    <string name="title_section3">3rd year</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_test">TestActivity</string>



    <string name="activity_label">Example</string>

    <string name="image_button_content_description">Change state of section</string>



    <string name="help_text">Help. WE are here to help you. Blah blah blah blah blah
    And some more blah blah blah blah blah</string>



    <string-array name="tabs">
        <item>Sem 1</item>
        <item>Sem 2</item>
    </string-array>
    <string name="title_activity_downloads">Downloads</string>
    <string name="title_activity_cgpacalculator">SGPA Calculator</string>
    <string name="title_activity_help_faq">Help &amp; FAQ</string>
    <string name="title_activity_about_us">About Us</string>

    <string-array name="NoOfSubjects">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="title_activity_arshdeep">Arshdeep</string>

    <string name="helpAc">Make sure you are logged in using your Name and the 10 digit University Roll Number.
    </string>

    <string name="helpAc1">If not, Logout and LogIn again using valid credentials.</string>

    <string name="helpAc2">If you have any trouble using the app, feel free to contact us. You can find our details in the AboutUs Section of the app.</string>

    <string name="faq1">Q.1. Why can not I see my result?</string>

    <string name="faqA1">A.1. This is either because you have logged in as some other person or your result has not yet been generated by the University</string>

    <string name="faq2">Q.2. The result takes too much time to load or does not load at all.</string>
    <string name="faqA2">A.1. Check your internet connection. Make sure you are using a good one...</string>
</resources>
