<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.arshdeep.gradify.HelpFAQ">

    <include layout="@layout/toolbar"></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpAc"
        android:textSize="15sp"
        android:padding="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpAc1"
        android:textSize="15sp"
        android:padding="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpAc2"
        android:textSize="15sp"
        android:padding="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FAQ"
        android:textSize="25sp"
        android:padding="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faq1"
        android:textSize="15sp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faqA1"
        android:textSize="15sp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faq2"
        android:textSize="15sp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"
        android:paddingTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faqA2"
        android:textSize="15sp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

</LinearLayout>

